--- a/arch/arm64/boot/dts/rockchip/px30-evb-ddr3-v10.dtsi
+++ b/arch/arm64/boot/dts/rockchip/px30-evb-ddr3-v10.dtsi
@@ -160,26 +160,26 @@
 		regulator-max-microvolt = <5000000>;
 	};
 
-	wireless-wlan {
-		compatible = "wlan-platdata";
-		wifi_chip_type = "AP6210";
-		WIFI,host_wake_irq = <&gpio0 RK_PB2 GPIO_ACTIVE_HIGH>;
-		status = "okay";
-	};
+	// wireless-wlan {
+	// 	compatible = "wlan-platdata";
+	// 	wifi_chip_type = "AP6210";
+	// 	WIFI,host_wake_irq = <&gpio0 RK_PB2 GPIO_ACTIVE_HIGH>;
+	// 	status = "okay";
+	// };
 
-	wireless-bluetooth {
-		compatible = "bluetooth-platdata";
-		clocks = <&rk809 1>;
-		clock-names = "ext_clock";
-		uart_rts_gpios = <&gpio1 RK_PC3 GPIO_ACTIVE_LOW>;
-		pinctrl-names = "default","rts_gpio";
-		pinctrl-0 = <&uart1_rts>;
-		pinctrl-1 = <&uart1_rts_gpio>;
-		BT,reset_gpio = <&gpio0 RK_PA1 GPIO_ACTIVE_HIGH>;
-		BT,wake_gpio = <&gpio2 RK_PB0 GPIO_ACTIVE_HIGH>;
-		BT,wake_host_irq = <&gpio0 RK_PB3 GPIO_ACTIVE_HIGH>;
-		status = "okay";
-	};
+	// wireless-bluetooth {
+	// 	compatible = "bluetooth-platdata";
+	// 	clocks = <&rk809 1>;
+	// 	clock-names = "ext_clock";
+	// 	uart_rts_gpios = <&gpio1 RK_PC3 GPIO_ACTIVE_LOW>;
+	// 	pinctrl-names = "default","rts_gpio";
+	// 	pinctrl-0 = <&uart1_rts>;
+	// 	pinctrl-1 = <&uart1_rts_gpio>;
+	// 	BT,reset_gpio = <&gpio0 RK_PA1 GPIO_ACTIVE_HIGH>;
+	// 	BT,wake_gpio = <&gpio2 RK_PB0 GPIO_ACTIVE_HIGH>;
+	// 	BT,wake_host_irq = <&gpio0 RK_PB3 GPIO_ACTIVE_HIGH>;
+	// 	status = "okay";
+	// };
 };
 
 &display_subsystem {
