--- a/arch/arm64/boot/dts/rockchip/px30-evb-ddr3-v10-robot-linux.dts
+++ b/arch/arm64/boot/dts/rockchip/px30-evb-ddr3-v10-robot-linux.dts
@@ -435,39 +435,7 @@
 };
 
 &mipi_dphy_rx0 {
-	status = "okay";
-
-	ports {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		port@0 {
-			reg = <0>;
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			mipi_in_ucam: endpoint@1 {
-				reg = <1>;
-				remote-endpoint = <&ucam_out>;
-				data-lanes = <1 2>;
-			};
-		};
-
-		port@1 {
-			reg = <1>;
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			dphy_rx0_out: endpoint@0 {
-				reg = <0>;
-				remote-endpoint = <&isp0_mipi_in>;
-			};
-		};
-	};
-};
-
-&nandc0 {
-	status = "okay";
+	status = "disabled";
 };
 
 &pmu_io_domains {
@@ -482,17 +450,7 @@
 };
 
 &rkisp1 {
-	status = "okay";
-
-	port {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		isp0_mipi_in: endpoint@0 {
-			reg = <0>;
-			remote-endpoint = <&dphy_rx0_out>;
-		};
-	};
+	status = "disabled";
 };
 
 &saradc {
